--- a/client/app/components/student-form/student-form.html
+++ b/client/app/components/student-form/student-form.html
@@ -5,7 +5,7 @@
       <div class="form-group">
         <label for="name">Name</label>
         <input type="text" class="form-control" required
-          [(ngModel)]="student.name"
+          [(ngModel)]="student.name" id="name"
             ngControl="name"  #name="ngForm" >
         <div [hidden]="name.valid || name.pristine" class="alert alert-danger">
           Name is required
@@ -15,7 +15,7 @@
       <div class="form-group">
         <label for="lastName">Last Name</label>
         <input type="text" class="form-control" required
-          [(ngModel)]="student.lastName"
+          [(ngModel)]="student.lastName" id="lastName"
             ngControl="lastName"  #lastName="ngForm" >
         <div [hidden]="lastName.valid || lastName.pristine" class="alert alert-danger">
           Last name is required
@@ -23,13 +23,20 @@
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" class="form-control" required
-          [(ngModel)]="student.email"
+        <input type="email" class="form-control" required
+          [(ngModel)]="student.email" id="email"
             ngControl="email"  #email="ngForm" pattern="^[a-zA-Z!#$%&'*+/=?^{|}~]([a-zA-Z0-9!#$&%'*+\-/=?^_{|}~]+([.]|[a-zA-Z0-9!#$&%'*+\-/=?^_{|}~]*))+@[a-zA-Z0-9]+\.[a-zA-Z]{2}$">
         <div [hidden]="email.valid || email.pristine" class="alert alert-danger">
           Email is required or invalid
         </div>
         
+      </div>
+
+      <div class="form-group">
+        <label for="grade">Grade</label>
+        <select [(ngModel)]="gradeId" class="form-control"> // value is an object
+          <option *ngFor="let grade of grades" [value]="grade._id">{{grade.name}}</option>
+        </select>
       </div>
       
       <button type="button" class="btn btn-default" [disabled]="!studentForm.form.valid" (click)="newStudent()">Create Student</button>
