--- a/client/app/components/test/test.component.html
+++ b/client/app/components/test/test.component.html
@@ -5,14 +5,10 @@
                 <h1>Wikipedia Demo</h1>
                 <p><i>Fetches after each keystroke</i></p>
                 <input #term (keyup)="search(term.value)"/>
-                <ul>
-                    <li *ngFor="let item of items | async" (click)="onClick(item)">{{item}} </li>
-                </ul>
+
             </div>
-            <div >
-                <ul id="typesoftask" [dragula]='"first-bag"'>
-                    <li>Translate vocabulary</li>
-                </ul>
+            <div class="col-md-12" id="typesoftask" [dragula]='"first-bag"'>
+                <div *ngFor="let item of items | async" class="col-md-12 drag-item" [dragula]='"bag-one"'>{{item}}</div>
             </div>
         </div>
         
