--- a/client/app/components/select-student/select-student.html
+++ b/client/app/components/select-student/select-student.html
@@ -3,7 +3,7 @@
 <p>{{student.email}}</p>
 
 
-<!--<h3>Oceny:</h3>
+<h3>Oceny:</h3>
 <ul class="marks">
     <li *ngFor="let mark of marks">
         <label>Value:</label><span>{{mark.value}}</span>
@@ -24,4 +24,4 @@
     <label>Description:</label>
     <input [(ngModel)]="addingMark.description">
     <button (click)="saveMark()">Save mark</button>
-</div>-->
+</div>
